test/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuvexa-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: nuvexa.local
      http:
        paths:
          # Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          # Backend: microservicio personal
          - path: /api/personal(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: personal
                port:
                  number: 3000

          # Backend: microservicio vehiculos
          - path: /api/vehiculos(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vehiculos
                port:
                  number: 3000
